Added the onboarding flow to exchange a company and setting the intial holder as well